examples added till 31st may